Tests/context/invalid/class40.java
class A {
	void somme(int a,boolean b) {
       
	}
    void somme(int r,boolean c) {
          
	}
}
{}

